Icons: Fix statusbar language icon size too big
(integrated from trunk branch change 82ecefe by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/komodo.p.css
+++ b/src/chrome/komodo/skin/komodo.p.css
@@ -230,6 +230,12 @@ statusbarpanel > toolbarbutton[type="menu"] > dropmarker {
   list-style-image: url("chrome://komodo/skin/images/menupopup_arrows.png");
 }
 
+#statusbar-language-menu > image
+{
+  width: 16px;
+  height: 16px;
+}
+
 
 /**
  * Status bar messages
